# electroexo

./: .gitignore  LICENSE  README.md  nsPEF_EV_literature_evidence.xlsx  pyproject.toml
docs/: developer_notes.md  input_schema.md  model_assumptions.md
electro_exocytosis/: __init__.py  __main__.py  cli.py  config.py  simulation.py  units.py
electro_exocytosis/evidence/: __init__.py  evidence_loader.py
electro_exocytosis/io/: readers.py  writers.py
electro_exocytosis/models/: __init__.py  cargo_potency.py  cell_state.py  dosimetry.py  electrodynamics.py  ev_release.py  injury_quality.py  ion_transport.py  manufacturing_qc.py  pulse.py  remodeling_repair.py
electro_exocytosis/numerics/: __init__.py  multiscale.py  solvers.py
electro_exocytosis/parameters/: default_parameters.yaml
electro_exocytosis/visualization/: plots.py  style.py
electroexo/: __init__.py  results.py  simulation.py  solver.py  stimulus.py
electroexo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
examples/: basic_simulation.py  compare_dosimetry_models.py  compare_membrane_electrodynamics.py  pulse_train_stimulation.py  scenario_baseline.yaml  scenario_direct_EV_engineering.yaml  scenario_high_dose.yaml
tests/: __init__.py  test_calcium.py  test_channels.py  test_config.py  test_dosimetry_example.py  test_electrodynamics.py  test_electrodynamics_example.py  test_exocytosis.py  test_membrane.py  test_outputs.py  test_pulse.py  test_simulation.py  test_solver.py  test_solver_smoke.py  test_stimulus.py  test_vesicle.py  test_visualization_style.py
(+6 files in other folders)
