[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "electro_exocytosis"
version = "0.1.0"
description = "Multi-layer simulation of nsPEF-induced extracellular vesicle release"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
    "typer>=0.9",
    "openpyxl>=3.1",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov"]

[project.scripts]
electro-exocytosis = "electro_exocytosis.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["electro_exocytosis*"]

[tool.setuptools.package-data]
electro_exocytosis = ["parameters/*.yaml"]
